--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+crossterm = "0.28.1"
+ratatui = "0.29.0"
+serde = "1.0.213"
+serde_json = "1.0.132"
+symphonia = "0.5.4"
